--- a/index.htm
+++ b/index.htm
@@ -173,20 +173,20 @@
       <div class="row text-center">
 
           <div class="col-md-4 px-5">
-               <p class="display-3 accent-secondary first">25.0%</p>
-            <h4>Initial Burn</h4>
+               <p class="display-3 accent-secondary first">7.0%</p>
+            <h4>Automatic SAFEMOON Redistribution</h4>
 
             </a>
          </div>
 
          <div class="col-md-4 px-5">
-               <p class="display-3 accent-secondary">4.0%</p>
-            <h4>Redist. to HODLERS</h4>
+               <p class="display-3 accent-secondary">3.0%</p>
+            <h4>Added to Liquidity</h4>
             </a>
          </div>
          <div class="col-md-4 px-5">
                <p class="display-3 accent-secondary first">4.0%</p>
-            <h4>LP Fee</h4>
+            <h4>BuyBack + Burn</h4>
 
             </a>
          </div>
