--- a/index.htm
+++ b/index.htm
@@ -56,7 +56,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item ml-4">
-            <a target="_blank" class="btn btn-primary disabled" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x8009A3002C15B124CAbec88476490ceA838597a8" style="margin-top: 15px">BUY - SOON</a>
+            <a target="_blank" class="btn btn-primary" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x8009A3002C15B124CAbec88476490ceA838597a8" style="margin-top: 15px">BUY - SOON</a>
           </li>
 
         
@@ -96,7 +96,7 @@
      <div class="hero-text">
        <h1> SafeMoonEarn </h1>
         <h2> 1st SafeMoon Yield Generation Token </h2>
-        <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4 disabled" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x8009A3002C15B124CAbec88476490ceA838597a8" target="_blank"><i class="fa fa-dollar-sign fa-lg"></i> <span class="ml-3"> BUY - SOON</span> </a>
+        <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x8009A3002C15B124CAbec88476490ceA838597a8" target="_blank"><i class="fa fa-dollar-sign fa-lg"></i> <span class="ml-3"> BUY - SOON</span> </a>
         <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4" target="_blank" href="https://t.me/safe_earn"><i class="fab fa-telegram-plane fa-lg"></i> <span class="ml-3"> TELEGRAM </span> </a>
       </div>
     </div>
@@ -363,7 +363,7 @@
 			 </div>
 
        
-        <a class="btn btn-primary btn-circle disabled floating-icon ico-2" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=" target="_blank">
+        <a class="btn btn-primary btn-circle floating-icon ico-2" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=" target="_blank">
           <i class="fas fa-dollar-sign fa-2x"></i>
         </a>
         <a class="btn btn-secondary btn-circle floating-icon" href="https://t.me/safe_earn" target="_blank">
