--- a/index.htm
+++ b/index.htm
@@ -4,25 +4,25 @@
 
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="SafeMoonEarn is the 1st ever Safemoon static rewards + AutoBoost + Zeus Buy-Back token. Best of all tokens, in one!">
+	<meta name="description" content="SafeEarn is the 1st ever Safemoon static rewards + AutoBoost + Zeus Buy-Back token. Best of all tokens, in one!">
 
 
 
-	<meta property="og:title" content="SafeMoonEarn: SafeMoon + AutoBoost + BuyBack! One of a kind"/>
+	<meta property="og:title" content="SafeEarn: SafeMoon + AutoBoost + BuyBack! One of a kind"/>
   <meta property="og:image" content="https://safearn.money/img/logo.png">
 	<meta property="og:site_name" content="Safe Earn"/>
 	<meta property="og:type" content="website"/>
-	<meta property="og:description" content="SafeMoonEarn is the 1st ever Safemoon static rewards + AutoBoost + Zeus Buy-Back token. Best of all tokens, in one!"/>
+	<meta property="og:description" content="SafeEarn is the 1st ever Safemoon static rewards + AutoBoost + Zeus Buy-Back token. Best of all tokens, in one!"/>
 
 	<link href="img/logo.png" rel="icon">
 
 
 	<meta name="keywords" content="safemooncrypto,moonshot,money,elon,elonmusk,meme,community"/>
-	<meta name="subject" content="SafeMoonEarn: Community-driven, fair-launched DeFi Token.">
+	<meta name="subject" content="SafeEarn: Community-driven, fair-launched DeFi Token.">
 	<meta name="copyright"content="SAFEARN">
 	<meta name="language" content="EN">
 
-	<title>SafeMoonEarn </title>
+	<title>SafeEarn </title>
 
 	<!-- Bootstrap core CSS -->
 	<link href="src/bootstrap.css" rel="stylesheet">
@@ -94,7 +94,7 @@
   <div class="container h-200">
     <div class="">
      <div class="hero-text">
-       <h1> SafeMoonEarn </h1>
+       <h1> SafeEarn </h1>
         <h2> 1st SafeMoon Yield Generation Token </h2>
         <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x8009A3002C15B124CAbec88476490ceA838597a8" target="_blank"><i class="fa fa-dollar-sign fa-lg"></i> <span class="ml-3"> BUY</span> </a>
         <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4" target="_blank" href="https://t.me/safe_earn"><i class="fab fa-telegram-plane fa-lg"></i> <span class="ml-3"> TELEGRAM </span> </a>
@@ -119,7 +119,7 @@
                 <h5 class="card-title">SafeMoon Reflection</h5>
                 
                 <p class="card-text">
-                  Simply HODL your SafeMoonEarn, and earn SafeMoon.<br/>
+                  Simply HODL your SafeEarn, and earn SafeMoon.<br/>
                   The original token that started it all, now, earned directly in your wallet
                 </p>
               </div>
@@ -171,7 +171,7 @@
             <h3 class="section-subheading">
             	Simple Tokenomics for everyone to understand. <br/>
               Standard Reflection Token, with many twists <br/> <br/>
-              SafeMoonEarn enables anyone to earn like crazy without doing much
+              SafeEarn enables anyone to earn like crazy without doing much
             </h3>
          </div>
       </div>
@@ -218,7 +218,7 @@
               <a data-toggle="collapse" class="collapse" href="#faq-list-1">What is this? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-parent=".faq-list">
                 <p>
-                SafeMoonEarn is the 1st ever safemoon-yield generation token <br/>
+                SafeEarn is the 1st ever safemoon-yield generation token <br/>
                 Simply hodl your $SAFEARN and earn $SAFEMOON. We've also added awesome features like Auto-Boost and ZEUS Buy-Back!
                 </p>
               </div>
@@ -331,7 +331,7 @@
 
 		  <div class="col-md-4 text-center">
 				<div class="px-2">
-				<h6 class="title">SafeMoonEarn - 2021</h6> <br>
+				<h6 class="title">SafeEarn - 2021</h6> <br>
 			
       </div>
 
