--- a/index.htm
+++ b/index.htm
@@ -56,7 +56,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item ml-4">
-            <a target="_blank" class="btn btn-primary" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x8009A3002C15B124CAbec88476490ceA838597a8" style="margin-top: 15px">BUY</a>
+            <a target="_blank" class="btn btn-primary disabled" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97" style="margin-top: 15px">BUY - SOON</a>
           </li>
 
         
@@ -80,8 +80,8 @@
 
   <!-- navbar donation button show this one on mobile -->
 	<div id="btn-buy-mobile">
-		<div id="donate-nav" class="btn btn-primary text-uppercase btn-lg">
-			<a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x8009A3002C15B124CAbec88476490ceA838597a8" target="_blank">BUY</a>
+		<div id="donate-nav" class="btn btn-primary text-uppercase btn-lg disabled">
+			<a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97" target="_blank">BUY - SOON</a>
 		</div>
 	</div>
 
@@ -96,7 +96,7 @@
      <div class="hero-text">
        <h1> SafeEarn </h1>
         <h2> 1st SafeMoon Yield Generation Token </h2>
-        <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x8009A3002C15B124CAbec88476490ceA838597a8" target="_blank"><i class="fa fa-dollar-sign fa-lg"></i> <span class="ml-3"> BUY</span> </a>
+        <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4 disabled" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97" target="_blank"><i class="fa fa-dollar-sign fa-lg"></i> <span class="ml-3"> BUY - SOON</span> </a>
         <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4" target="_blank" href="https://t.me/safe_earn"><i class="fab fa-telegram-plane fa-lg"></i> <span class="ml-3"> TELEGRAM </span> </a>
       </div>
     </div>
@@ -149,7 +149,7 @@
         </div>
         <h4> <br/>
           Contract: <br/>
-          <a href="https://bscscan.com/address/0x8009A3002C15B124CAbec88476490ceA838597a8#code" target="_blank" style="color: #00c8e8"> 0x8009A3002C15B124CAbec88476490ceA838597a8</a>
+          <a href="https://bscscan.com/address/0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97" target="_blank" style="color: #00c8e8"> 0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97</a>
 
         </h4>
 
@@ -239,7 +239,7 @@
               <a data-toggle="collapse" href="#faq-list-2" class="collapsed"> How to buy? Slippage? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-parent=".faq-list">
                 <p>
-                  You can <a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x8009A3002C15B124CAbec88476490ceA838597a8" target="_blank" style="display: inline; padding: 0"> buy here </a>, or paste the contract address into PancakeSwap (0x8009A3002C15B124CAbec88476490ceA838597a8). <br/>
+                  You can <a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97" target="_blank" style="display: inline; padding: 0"> buy (SOON) </a>, or paste the contract address into PancakeSwap (0x8009A3002C15B124CAbec88476490ceA838597a8). <br/>
                   Set Slippage to 13%-16%. Use Pancake V2
                 </p>
               </div>
@@ -361,7 +361,7 @@
 			 </div>
 
        
-        <a class="btn btn-primary btn-circle floating-icon ico-2" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=" target="_blank">
+        <a class="btn btn-primary btn-circle floating-icon ico-2 disabled" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97" target="_blank">
           <i class="fas fa-dollar-sign fa-2x"></i>
         </a>
         <a class="btn btn-secondary btn-circle floating-icon" href="https://t.me/safe_earn" target="_blank">
