--- a/china.htm
+++ b/china.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0045)https://landtemplates.com/previews/index.html -->
+
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 
@@ -14,7 +14,7 @@
 	<meta property="og:type" content="website"/>
 	<meta property="og:description" content="SafeEarn是第一个Safemoon静态奖金+自动提升+Zeus回购的代币。所有代币中最好的，都在一起了!"/>
 
-	<link href="img/logo.png" rel="icon">
+	<link href="img/logo-2.png" rel="icon">
 
 
 	<meta name="keywords" content="safemoon,cryptocurrency,money,钱"/>
