--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0045)https://landtemplates.com/previews/index.html -->
+
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 
@@ -14,7 +14,7 @@
 	<meta property="og:type" content="website"/>
 	<meta property="og:description" content="SafeEarn is the 1st ever Safemoon static rewards + AutoBoost + Zeus Buy-Back token. Best of all tokens, in one!"/>
 
-	<link href="img/logo.png" rel="icon">
+	<link href="img/logo-2.png" rel="icon">
 
 
 	<meta name="keywords" content="safemooncrypto,moonshot,money,elon,elonmusk,meme,community"/>
