--- a/china.htm
+++ b/china.htm
@@ -42,6 +42,15 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Work+Sans:ital,wght@0,400;0,500;0,700;1,600&display=swap" rel="stylesheet">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QDWMXGKEVJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-QDWMXGKEVJ');
+  </script>
 </head>
 
 <body id="page-top">
