--- a/china.htm
+++ b/china.htm
@@ -186,23 +186,29 @@
       </div>
       <div class="row text-center">
 
-          <div class="col-md-4 px-5">
-               <p class="display-3 accent-secondary first">7.0%</p>
+          <div class="col-md-3 px-5">
+               <p class="display-3 accent-secondary first">8.5%</p>
             <h4>自动的SAFEMOON再分配</h4>
             </a>
          </div>
 
-         <div class="col-md-4 px-5">
-               <p class="display-3 accent-secondary">3.0%</p>
+         <div class="col-md-3 px-5">
+               <p class="display-3 accent-secondary">2.0%</p>
             <h4>添加到流动资金</h4>
             </a>
          </div>
-         <div class="col-md-4 px-5">
-               <p class="display-3 accent-secondary first">4.0%</p>
+         <div class="col-md-3 px-5">
+               <p class="display-3 accent-secondary first">3.5%</p>
             <h4>回购+燃烧</h4>
 
             </a>
          </div>
+
+         <div class="col-md-3 px-5">
+            <p class="display-3 accent-secondary first">1.0%</p>
+            <h4>营销</h4>
+            </a>
+        </div>
  
       </div>
       
