--- a/index.htm
+++ b/index.htm
@@ -186,22 +186,28 @@
       </div>
       <div class="row text-center">
 
-          <div class="col-md-4 px-5">
-               <p class="display-3 accent-secondary first">7.0%</p>
+          <div class="col-md-3 px-5">
+               <p class="display-3 accent-secondary first">8.5%</p>
             <h4>Automatic SAFEMOON Redistribution</h4>
             </a>
          </div>
 
-         <div class="col-md-4 px-5">
-               <p class="display-3 accent-secondary">3.0%</p>
+         <div class="col-md-3 px-5">
+               <p class="display-3 accent-secondary">2.0%</p>
             <h4>Added to Liquidity</h4>
             </a>
          </div>
-         <div class="col-md-4 px-5">
-               <p class="display-3 accent-secondary first">4.0%</p>
+         <div class="col-md-3 px-5">
+               <p class="display-3 accent-secondary first">3.5%</p>
             <h4>BuyBack + Burn</h4>
             </a>
          </div>
+         <div class="col-md-3 px-5">
+            <p class="display-3 accent-secondary first">1.0%</p>
+            <h4>Marketing Wallet</h4>
+            </a>
+        </div>
+         
  
       </div>
       
