--- a/index.htm
+++ b/index.htm
@@ -204,7 +204,7 @@
          </div>
          <div class="col-md-3 px-5">
             <p class="display-3 accent-secondary first">1.0%</p>
-            <h4>Marketing Wallet</h4>
+            <h4>Marketing</h4>
             </a>
         </div>
          
