--- a/china.htm
+++ b/china.htm
@@ -158,7 +158,7 @@
         </div>
         <h4> <br/>
           合同: <br/>
-          <a href="https://bscscan.com/address/0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97#code" target="_blank" style="color: #00c8e8"> 0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97</a>
+          <a href="https://bscscan.com/address/0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97#code" target="_blank" class="contract-id"> 0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97</a>
 
         </h4>
 
