--- a/index.htm
+++ b/index.htm
@@ -158,7 +158,7 @@
         </div>
         <h4> <br/>
           Contract: <br/>
-          <a href="https://bscscan.com/address/0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97" target="_blank" style="color: #00c8e8"> 0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97</a>
+          <a href="https://bscscan.com/address/0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97" target="_blank" class="contract-id"> 0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97</a>
 
         </h4>
 
@@ -186,23 +186,23 @@
       </div>
       <div class="row text-center">
 
-          <div class="col-md-3 px-5">
+          <div class="col-md-3 col-sm-6 px-5">
                <p class="display-3 accent-secondary first">8.5%</p>
             <h4>Automatic SAFEMOON Redistribution</h4>
             </a>
          </div>
 
-         <div class="col-md-3 px-5">
+         <div class="col-md-3 col-sm-6px-5">
                <p class="display-3 accent-secondary">2.0%</p>
             <h4>Added to Liquidity</h4>
             </a>
          </div>
-         <div class="col-md-3 px-5">
+         <div class="col-md-3 col-sm-6 px-5">
                <p class="display-3 accent-secondary first">3.5%</p>
             <h4>BuyBack + Burn</h4>
             </a>
          </div>
-         <div class="col-md-3 px-5">
+         <div class="col-md-3 col-sm-6 px-5">
             <p class="display-3 accent-secondary first">1.0%</p>
             <h4>Marketing</h4>
             </a>
