--- a/index.htm
+++ b/index.htm
@@ -90,7 +90,7 @@
   <!-- navbar donation button show this one on mobile -->
 	<div id="btn-buy-mobile">
 		<div id="donate-nav" class="btn btn-primary text-uppercase btn-lg disabled">
-			<a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97" target="_blank">BUY - SOON</a>
+			<a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97" target="_blank">BUY</a>
 		</div>
 	</div>
 
@@ -184,7 +184,7 @@
             </h3>
          </div>
       </div>
-      <div class="row text-center">
+      <div class="row text-center token-cols">
 
           <div class="col-md-3 col-sm-6 px-5">
                <p class="display-3 accent-secondary first">8.5%</p>
