--- a/china.htm
+++ b/china.htm
@@ -184,7 +184,7 @@
             </h3>
          </div>
       </div>
-      <div class="row text-center">
+      <div class="row text-center token-cols">
 
           <div class="col-md-3 px-5">
                <p class="display-3 accent-secondary first">8.5%</p>
