--- a/index.htm
+++ b/index.htm
@@ -68,7 +68,7 @@
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item ml-4">
             <a target="_blank" class="btn btn-primary"
-              data-custom="buy-btn" href="https://t.me/safe_earn"
+              data-custom="buy-btn" href="https://safearn.money/presale"
               style="margin-top: 15px">BUY</a>
           </li>
 
@@ -95,7 +95,7 @@
   <!-- navbar donation button show this one on mobile -->
   <div id="btn-buy-mobile">
     <div id="donate-nav" class="btn btn-primary text-uppercase btn-lg">
-      <a data-custom="buy-btn" href="https://t.me/safe_earn"
+      <a data-custom="buy-btn" href="https://safearn.money/presale"
         target="_blank">BUY</a>
     </div>
   </div>
@@ -112,7 +112,7 @@
           <h1> SafeEarn </h1>
           <h2> 1st SafeMoon Yield Generation Token </h2>
           <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4 mt-4 mt-md-0"
-            data-custom="buy-btn" href="https://t.me/safe_earn"
+            data-custom="buy-btn" href="https://safearn.money/presale"
             target="_blank"><i class="fa fa-dollar-sign fa-lg"></i> <span class="ml-3"> BUY SAFEARN</span> </a>
           <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4" target="_blank"
             href="https://t.me/safe_earn"><i class="fab fa-telegram-plane fa-lg"></i> <span class="ml-3"> TELEGRAM
@@ -323,7 +323,7 @@
             <div id="faq-list-2" class="collapse" data-parent=".faq-list">
               <p>
                 You can <a
-                  data-custom="buy-btn" href="https://t.me/safe_earn"
+                  data-custom="buy-btn" href="https://safearn.money/presale"
                   target="_blank" style="display: inline; padding: 0"> buy </a>, or paste the contract address
                 into PancakeSwap (0x8009A3002C15B124CAbec88476490ceA838597a8). <br />
                 Set Slippage to 13%-16%. Use Pancake V2
@@ -449,7 +449,7 @@
 
 
         <a class="btn btn-primary btn-circle floating-icon ico-2"
-          data-custom="buy-btn" href="https://t.me/safe_earn"
+          data-custom="buy-btn" href="https://safearn.money/presale"
           target="_blank">
           <i class="fas fa-dollar-sign fa-2x"></i>
         </a>
