--- a/presale/index.html
+++ b/presale/index.html
@@ -7,13 +7,19 @@
         <link rel="icon" href="img/favicon.ico" type="image/png">
         <title>PRESALE - SafeEarn</title>
 	
-		<!-- <meta name="description" content="Zeus Doge is the ultimate iteration of memecoins on BSC. Combining the powerts of popular tokenomics, Zeus Doge will bring investors to Olympus and beyond.">
+		<meta name="description"
+		content="Join the SafeEarn Presale, the 1st ever Safemoon static rewards + AutoBoost + Zeus Buy-Back token. Best of all tokens, in one!">
+	
+	
+	
+	  <meta property="og:title" content="SafeEarn: JOIN THE PRESALE" />
+	  <meta property="og:image" content="https://safearn.money/img/logo-bg.png">
+	  <meta property="og:site_name" content="SafeEarn Presale" />
+	  <meta property="og:type" content="website" />
+	  <meta property="og:description"
+		content="Join the SafeEarn Presale, the 1st ever Safemoon static rewards + AutoBoost + Zeus Buy-Back token. Best of all tokens, in one!" />
 
-		<meta property="og:title" content="ZEUS DOGE - Stack Dogecoin while holding the almighty god of buyback tokens!"/>
-		<meta property="og:image" content="https://zeusdoge.com/img/logo.png">
-	  <meta property="og:site_name" content="ZEUS DOGE"/>
-	  <meta property="og:type" content="website"/>
-	  <meta property="og:description" content="Zeus Doge is the ultimate iteration of memecoins on BSC. Combining the powerts of popular tokenomics, Zeus Doge will bring investors to Olympus and beyond."/> -->
+
   
 	  <link href="img/logo.png" rel="icon">
   
