--- a/presale/index.html
+++ b/presale/index.html
@@ -124,7 +124,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="https://bscscan.com/address/0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97" class="d-flex">
+								<a href="https://bscscan.com/address/0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97" class="d-flex" target="_blank">
 									<i class="far fa-scroll mr-2" ></i>
 									<span>
 										<b class="mr-1"> Contract: </b>
