--- a/presale/index.html
+++ b/presale/index.html
@@ -286,7 +286,7 @@
 									  </tr>
 									  <tr>
 										<th scope="row">Presale Rate</th>
-										<td>0.63 Billion SAFEARN per BNB</td>
+										<td>0.63 Trillion SAFEARN per BNB</td>
 									  </tr>
 									  <!-- <tr>
 										<th scope="row">Tokens for Presale</th>
