--- a/presale/index.html
+++ b/presale/index.html
@@ -187,10 +187,10 @@
 								<h3 class="mb-2">Presale Progress</h3>
 								
 								<div class="token-item">
-									<p> <span class="counter">0.0</span> BNB Raised</p>
+									<p> <span class="counter" id="bnb-raised">0.0</span> BNB Raised</p>
 									<div class="progress_br">
 										<div class="progress">
-											<div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+											<div class="progress-bar" id="progress-bar-presale" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
 									</div>
 								</div>
@@ -379,20 +379,19 @@
 				  <form>
 					<div class="form-group row mt-5 d-flex justify-content-center align-items-end">
 					  <div class="col-12">
-						   If you have any trouble using the Presale dApp, don't hesitate to ask in our group. <br/>
-						   Additionally, you have instructions to contribute in the Presale manually above
+						   If you have any trouble using the Custom Presale website, please ask in our Telegram group. <br/>
 					  </div>
 					  <br/><br/>
-					  <div class="col-md-4 col-12 mt-5">
+					  <div class="col-6 mt-5">
 						  <label for="bnbInput" class="col-form-label">
 							  Your Contribution:
 						  </label>
 						  <small id="emailHelp" class="form-text text-muted">
-							  Min. Contribution = 0.1 BNB <br/>
-							  Max. Contribution = 6 BNB <br/>
+							  Min. Contribution = 0.01 BNB <br/>
+							  Max. Contribution = 2 BNB <br/>
 						  </small>
 					  </div>
-					  <div class="col-md-4 col-12">
+					  <div class="col-6">
 						<input type="number" class="form-control mb-4 mt-xs-3" id="bnbInput" placeholder="Enter BNB">
 						  <small id="emailHelp" class="form-text text-muted">
 							  You will receive <span id="you-receive"> 0 </span> SAFEARN <br/>
