--- a/presale/index.html
+++ b/presale/index.html
@@ -123,7 +123,7 @@
 									</span>
 								</a>
 							</li>
-							<li>
+							<li style="word-break: break-all;">
 								<a href="https://bscscan.com/address/0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97" class="d-flex" target="_blank">
 									<i class="far fa-scroll mr-2" ></i>
 									<span>
@@ -258,7 +258,7 @@
 					<div class="container">
 						<div class="row" style="background-color: white;">
 							<div class="col-12 pt-3">
-								<table class="table table-striped">
+								<table class="table table-striped" style="word-break: break-word;">
 									<tbody>
 									<tr>
 										<th scope="row">Presale Date</th>
