China presale + contract

--- a/index.htm
+++ b/index.htm
@@ -267,8 +267,8 @@
       
         <h4 class="pt-2" style="text-align: center;"> <br />
           Contract: <br />
-          <a href="https://bscscan.com/address/0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97" target="_blank"
-            class="contract-id"> 0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97</a>
+          <a href="https://bscscan.com/address/0x58839F99ae1c9CCA4Ddab07CD986fdb4751067AE#code" target="_blank"
+            class="contract-id"> 0x58839F99ae1c9CCA4Ddab07CD986fdb4751067AE</a>
     
         </h4>
 
@@ -325,7 +325,7 @@
                 You can <a
                   data-custom="buy-btn" href="https://safearn.money/presale"
                   target="_blank" style="display: inline; padding: 0"> buy </a>, or paste the contract address
-                into PancakeSwap (0x8009A3002C15B124CAbec88476490ceA838597a8). <br />
+                into PancakeSwap (0x58839F99ae1c9CCA4Ddab07CD986fdb4751067AE). <br />
                 Set Slippage to 13%-16%. Use Pancake V2
               </p>
             </div>
