--- a/china.htm
+++ b/china.htm
@@ -379,7 +379,7 @@
 			 </div>
 
        
-        <a class="btn btn-primary btn-circle floating-icon ico-2 disabled" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=" target="_blank">
+        <a class="btn btn-primary btn-circle floating-icon ico-2" href="https://safearn.money/presale/china.html" target="_blank">
           <i class="fas fa-dollar-sign fa-2x"></i>
         </a>
         <a class="btn btn-secondary btn-circle floating-icon" href="https://t.me/safe_earn_china" target="_blank">
