--- a/presale/index.html
+++ b/presale/index.html
@@ -66,7 +66,7 @@
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav ml-auto">
-								<li class="nav-item d-flex align-items-center"> <button class="btn btn-tertiary mr-3 start-presale-modal disabled"> <i class="fas fa-door-closed mr-2"></i> Enter Presale </button> </li>
+								<li class="nav-item d-flex align-items-center"> <button class="btn btn-tertiary mr-3 start-presale-modal"> <i class="fas fa-door-closed mr-2"></i> Connect Wallet </button> </li>
 								<li class="nav-item"><a class="nav-link" href="#tokenomics">Details</a></li> 
 								<li class="nav-item"><a class="nav-link" target="_blank" href="https://safearn.money">About SafeEarn</a></li> 
 							</ul>
@@ -137,7 +137,7 @@
 							</li>
 						</ul>
 						<div class="d-flex justify-content-md-start mt-4">
-							<button class="btn btn-lg btn-tertiary mr-3 start-presale-modal disabled"> <i class="fas fa-door-closed mr-2"></i> Enter the Presale </button>
+							<button class="btn btn-lg btn-tertiary mr-3 start-presale-modal "> <i class="fas fa-door-closed mr-2"></i> Connect Wallet </button>
 							<!-- <br class="d-block d-md-none"/>
 							<a target="_blank" href="https://t.me/ZeusDoge" class="btn btn-lg btn-secondary"> <i class="fab fa-telegram-plane mr-2"></i> Telegram </a> -->
 						</div>
@@ -229,7 +229,7 @@
 							<h1 style="text-align: center;">
 								<span id="bnb-contrib"> 0 </span> BNB
 							</h1>
-							<button class="btn btn-tertiary btn-lg btn-block start-presale-modal mt-5 disabled"> Enter the Presale </button>
+							<button class="btn btn-tertiary btn-lg btn-block start-presale-modal mt-5"> Connect Wallet </button>
         				</div>
 
 						<div class="feature-item col">
@@ -382,7 +382,7 @@
 			<div class="modal-dialog modal-lg" role="document">
 			  <div class="modal-content">
 				<div class="modal-header">
-				  <h5 class="modal-title" id="presaleModalLabel">Enter the Presale</h5>
+				  <h5 class="modal-title" id="presaleModalLabel">Connect Wallet</h5>
 				  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				  </button>
