Minor changes visual

--- a/presale/china.html
+++ b/presale/china.html
@@ -66,7 +66,7 @@
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav ml-auto">
-								<li class="nav-item d-flex align-items-center"> <button class="btn btn-tertiary mr-3 start-presale-modal disabled"> <i class="fas fa-door-closed mr-2"></i> 转到代币预售 </button> </li>
+								<li class="nav-item d-flex align-items-center"> <button class="btn btn-tertiary mr-3 start-presale-modal"> <i class="fas fa-door-closed mr-2"></i> 转到代币预售 </button> </li>
 								<li class="nav-item"><a class="nav-link" href="#tokenomics">详细内容</a></li> 
 								<li class="nav-item"><a class="nav-link" target="_blank" href="https://safearn.money/china.htm">关于SafeEarn</a></li> 
 							</ul>
@@ -134,7 +134,7 @@
 							</li>
 						</ul>
 						<div class="d-flex justify-content-md-start mt-4">
-							<button class="btn btn-lg btn-tertiary mr-3 start-presale-modal disabled"> <i class="fas fa-door-closed mr-2"></i> 转到代币预售</button>
+							<button class="btn btn-lg btn-tertiary mr-3 start-presale-modal"> <i class="fas fa-door-closed mr-2"></i> 转到代币预售</button>
 							<!-- <br class="d-block d-md-none"/>
 							<a target="_blank" href="https://t.me/ZeusDoge" class="btn btn-lg btn-secondary"> <i class="fab fa-telegram-plane mr-2"></i> Telegram </a> -->
 						</div>
@@ -225,7 +225,7 @@
 							<h1 style="text-align: center;">
 								<span id="bnb-contrib"> 0 </span> BNB
 							</h1>
-							<button class="btn btn-tertiary btn-lg btn-block start-presale-modal mt-5 disabled">  转到代币预售 </button>
+							<button class="btn btn-tertiary btn-lg btn-block start-presale-modal mt-5">  转到代币预售 </button>
         				</div>
 
 						<div class="feature-item col">
