--- a/presale/index.html
+++ b/presale/index.html
@@ -413,7 +413,7 @@
 					  </div>
 
 					  <div class="col-12 col-md-8 px-5">
-							  <button type="button" class="btn-block mt-5 btn-gradient-blue btn-submit-presale donation-button btn btn-xl" id="submit-presale" data-exact-value="0.01" style="color:white !important">Contribute in the Presale</button>
+							  <button type="button" class="btn-block mt-5 btn-tertiary btn-submit-presale btn btn-xl" id="submit-presale" data-exact-value="0.01">Contribute in the Presale</button>
 					  </div>
 
 					</div>
