--- a/presale/index.html
+++ b/presale/index.html
@@ -221,7 +221,7 @@
         	</div>
 			<div class="container mt-5">
         		<div class="row listing px-2">
-						<div class="feature-item col mb-5 mb-md-0">
+						<div class="feature-item col mb-5 mb-md-0" style="word-break: break-word;">
         					<i class="flaticon-sketch"></i>
         					<h4 class="" style="text-align: center;">
 								<i class="fas fa-child gradient-icon mr-0 mr-lg-4 mb-3 mb-lg-0"> </i>
@@ -232,7 +232,7 @@
 							<button class="btn btn-tertiary btn-lg btn-block start-presale-modal mt-5"> Connect Wallet </button>
         				</div>
 
-						<div class="feature-item col">
+						<div class="feature-item col" style="word-break: break-word;">
         					<i class="flaticon-skyline"></i>
         					<h4 class="" style="text-align: center;">
 								<i class="fas fa-coin gradient-icon mr-0 mr-lg-4 mb-3 mb-lg-0"> </i>
