--- a/presale/index.html
+++ b/presale/index.html
@@ -169,6 +169,11 @@
 		<section class="welcome_area py-5" id="tokenomics">
         	<div class="container">
         		<div class="row welcome_inner">
+					<div class="col-12 alert alert-success my-5 " role="alert">
+						Thank you! Your Transaction was sent, it will be processed soon. <br/>
+						Check your Wallet!
+					</div>
+
         			<div class="col-lg-7 px-4 px-md-0">
         				<div class="welcome_text">
         					<h4>Presale Details</h4>
@@ -418,13 +423,11 @@
 
 					</div>
 
+					<div class="alert alert-success my-5 thx-for-presale" role="alert" >
+						Thank you! Your Transaction was sent, it will be processed soon. <br/>
+						Check your Wallet!
+					</div>
 
-
-
-				  <div class="alert alert-success my-5 " role="alert" id="thx-for-presale">
-					Thank you! Your Transaction was sent, it will be processed soon. <br/>
-					Check your Metamask.
-				  </div>
 				</div>
 				<div class="modal-footer justify-content-around pt-5 d-none d-sm-flex">
 
