--- a/presale/index.html
+++ b/presale/index.html
@@ -169,7 +169,7 @@
 		<section class="welcome_area py-5" id="tokenomics">
         	<div class="container">
         		<div class="row welcome_inner">
-					<div class="col-12 alert alert-success my-5 " role="alert">
+					<div class="col-12 alert alert-success my-5 thx-for-presale" role="alert">
 						Thank you! Your Transaction was sent, it will be processed soon. <br/>
 						Check your Wallet!
 					</div>
