--- a/presale/index.html
+++ b/presale/index.html
@@ -295,14 +295,18 @@
 										<th scope="row">Presale Rate</th>
 										<td>0.63 Trillion SAFEARN per BNB</td>
 									  </tr>
-									  <!-- <tr>
+									  <tr>
 										<th scope="row">Tokens for Presale</th>
-										<td>0%</td>
+										<td>31.5%</td>
 									  </tr>
 									  <tr>
 										<th scope="row">Tokens for Liquidity</th>
-										<td>0%</td>
-									  </tr> -->
+										<td>31.5%</td>
+									  </tr>
+									  <tr>
+										<th scope="row">Initial Burn</th>
+										<td>31.5%</td>
+									  </tr>
 									  <tr>
 										<th scope="row">SafeEarn Contract</th>
 
