--- a/presale/china.html
+++ b/presale/china.html
@@ -191,10 +191,10 @@
 								<h3 class="mb-2">代币预售进展</h3>
 								
 								<div class="token-item">
-									<p> 已筹得<span class="counter">0.0</span> BNB 美元</p>
+									<p> 已筹得<span class="counter" id="bnb-raised">0.0</span> BNB 美元</p>
 									<div class="progress_br">
 										<div class="progress">
-											<div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+											<div class="progress-bar" role="progressbar" id="progress-bar-presale" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
 									</div>
 								</div>
@@ -408,8 +408,8 @@
 							你贡献的代币:
 						  </label>
 						  <small id="emailHelp" class="form-text text-muted">
-							  Min. Contribution = 0.1 BNB <br/>
-							  Max. Contribution = 6 BNB <br/>
+							  Min. Contribution = 0.01 BNB <br/>
+							  Max. Contribution = 2 BNB <br/>
 						  </small>
 					  </div>
 					  <div class="col-md-4 col-12">
