--- a/china.htm
+++ b/china.htm
@@ -210,8 +210,8 @@
       </div>
       <h4 class="pt-2" style="text-align: center;"> <br />
         Contract: <br />
-        <a href="https://bscscan.com/address/0x58839F99ae1c9CCA4Ddab07CD986fdb4751067AE#code" target="_blank"
-          class="contract-id"> 0x58839F99ae1c9CCA4Ddab07CD986fdb4751067AE</a>
+        <a href="https://bscscan.com/address/0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff#code" target="_blank"
+          class="contract-id"> 0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff</a>
   
       </h4>
       
@@ -258,7 +258,7 @@
               <a data-toggle="collapse" href="#faq-list-2" class="collapsed"> How to buy? Slippage? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-parent=".faq-list">
                 <p>
-                  你可以<a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97" target="_blank" style="display: inline; padding: 0"> 在这里买到它 </a>, 或将合同地址粘贴到PancakeSwap中 (0xc21e13a10eC7468257ecDA084D1A19afF4E8cd97). <br/>
+                  你可以<a href="https://safearn.money/presale/china.html" target="_blank" style="display: inline; padding: 0"> 在这里买到它 </a>, 或将合同地址粘贴到PancakeSwap中 (0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff). <br/>
                   设置滑移率为13%-16%。使用煎饼V2
                 </p>
               </div>
