--- a/presale/index.html
+++ b/presale/index.html
@@ -127,7 +127,7 @@
 								<a href="https://bscscan.com/address/0xa276880B537de681b50c4f4bc7Cf6843d4da06Ee#code" class="d-flex" target="_blank">
 									<i class="far fa-scroll mr-2" ></i>
 									<span>
-										<b class="mr-1"> Contract: </b>
+										<b class="mr-1"> Presale Contract: </b>
 										0xa276880B537de681b50c4f4bc7Cf6843d4da06Ee
 									</span>
 									<i class="fas fa-external-link ml-3"></i>
