--- a/presale/china.html
+++ b/presale/china.html
@@ -200,10 +200,10 @@
 								</div>
 
 								<div class="row listing">
-									<div class="col">
+									<!-- <div class="col">
 										<p class="mb-2">将成为公开的:</p>
 										<h1 id="tmr-public"> 0:00:00 </h1>
-									</div>
+									</div> -->
 									<div class="col">
 										<p class="mb-2">将停止提供:</p>
 										<h1 id="tmr-ends"> 0:00:00 </h1>
