--- a/presale/index.html
+++ b/presale/index.html
@@ -201,10 +201,10 @@
 								</div>
 
 								<div class="row listing">
-									<div class="col">
+									<!-- <div class="col">
 										<p class="mb-2">Goes public in:</p>
 										<h1 id="tmr-public"> 0:00:00 </h1>
-									</div>
+									</div> -->
 									<div class="col">
 										<p class="mb-2">Ends in:</p>
 										<h1 id="tmr-ends"> 0:00:00 </h1>
