--- a/china.htm
+++ b/china.htm
@@ -234,7 +234,7 @@
           <ul>
             <li data-aos="fade-up">
               <i class="far fa-question-circle bx bx-help-circle icon-help"></i>
-              <a data-toggle="collapse" class="collapse" href="#faq-list-1">What is this? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <a data-toggle="collapse" class="collapse" href="#faq-list-1">它是什么？ <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-parent=".faq-list">
                 <p>
                   SafeEarn是第一个Safemoon静态奖金+自动提升+Zeus回购的代币。所有代币中最好的，都在一起了! <br/>
@@ -245,17 +245,17 @@
 
             <li data-aos="fade-up" data-aos-delay="400">
               <i class="far fa-question-circle bx bx-help-circle icon-help"></i>
-              <a data-toggle="collapse" href="#faq-list-6" class="collapsed">Is this SAFU?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <a data-toggle="collapse" href="#faq-list-6" class="collapsed">这是否安全？<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-6" class="collapse" data-parent=".faq-list">
                 <p>
-                  100%安全，流动性被锁定，所有权被放弃，没有预售或讨厌的把戏，对所有人都是一个公平的开始，简单地说，它是防暴的。
+                  100%安全，流动性被锁定，所有Dev钱包已经被共享，我们的决定总是非常透明。只要来Telegram问问就知道了!
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="100">
               <i class="far fa-question-circle bx bx-help-circle icon-help"></i>
-              <a data-toggle="collapse" href="#faq-list-2" class="collapsed"> How to buy? Slippage? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <a data-toggle="collapse" href="#faq-list-2" class="collapsed"> 我如何购买？Slip?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-parent=".faq-list">
                 <p>
                   你可以<a href="https://safearn.money/presale/china.html" target="_blank" style="display: inline; padding: 0"> 在这里买到它 </a>, 或将合同地址粘贴到PancakeSwap中 (0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff). <br/>
