--- a/index.htm
+++ b/index.htm
@@ -310,8 +310,7 @@
                 class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
             <div id="faq-list-6" class="collapse" data-parent=".faq-list">
               <p>
-                100% SAFU, Liquidity is Locked, Ownership renounced, NO presale or nasty tricks, Fair-Launch for all,
-                simply put, this is rugproof
+                100% SAFU, Liquidity is Locked, All Dev wallets have been shared, and we are always very transparent on our decisions. Just come to the Telegram and ask!
               </p>
             </div>
           </li>
