Ready to launch!

--- a/index.htm
+++ b/index.htm
@@ -68,7 +68,7 @@
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item ml-4">
             <a target="_blank" class="btn btn-primary"
-              data-custom="buy-btn" href="https://safearn.money/presale"
+              data-custom="buy-btn" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff"
               style="margin-top: 15px">BUY</a>
           </li>
 
@@ -95,7 +95,7 @@
   <!-- navbar donation button show this one on mobile -->
   <div id="btn-buy-mobile">
     <div id="donate-nav" class="btn btn-primary text-uppercase btn-lg">
-      <a data-custom="buy-btn" href="https://safearn.money/presale"
+      <a data-custom="buy-btn" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff"
         target="_blank">BUY</a>
     </div>
   </div>
@@ -111,8 +111,9 @@
         <div class="hero-text">
           <h1> SafeEarn </h1>
           <h2> 1st SafeMoon Yield Generation Token </h2>
+          <h2 style="color: #ff50c9;"> <b>Just Launched!</b> Double sell tax for the first 24hs!</h2>
           <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4 mt-4 mt-md-0"
-            data-custom="buy-btn" href="https://safearn.money/presale"
+            data-custom="buy-btn" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff"
             target="_blank"><i class="fa fa-dollar-sign fa-lg"></i> <span class="ml-3"> BUY SAFEARN</span> </a>
           <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4" target="_blank"
             href="https://t.me/safe_earn"><i class="fab fa-telegram-plane fa-lg"></i> <span class="ml-3"> TELEGRAM
@@ -232,8 +233,10 @@
       <div class="row">
         <div class="col-lg-12 text-center mb-5">
           <h3 class="section-subheading">
-            Simple Tokenomics for everyone to understand. <br />
-            Standard Reflection Token, with many twists <br /> <br />
+            Standard Reflection Token, with many twists. <br/>
+            Simply hold SafeEarn, and you will earn SafeMoon, directly to your wallet, no gas needed. <br />  <br/>
+            In addition to this, an anti-whale system prevents big sell-offs, protecting holders against potential price dumps.
+            <br />
             SafeEarn enables anyone to earn like crazy without doing much
           </h3>
         </div>
@@ -264,6 +267,8 @@
 
 
       </div>
+
+      
       
         <h4 class="pt-2" style="text-align: center;"> <br />
           Contract: <br />
@@ -322,7 +327,7 @@
             <div id="faq-list-2" class="collapse" data-parent=".faq-list">
               <p>
                 You can <a
-                  data-custom="buy-btn" href="https://safearn.money/presale"
+                  data-custom="buy-btn" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff"
                   target="_blank" style="display: inline; padding: 0"> buy </a>, or paste the contract address
                 into PancakeSwap (0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff). <br />
                 Set Slippage to 13%-16%. Use Pancake V2
@@ -448,7 +453,7 @@
 
 
         <a class="btn btn-primary btn-circle floating-icon ico-2"
-          data-custom="buy-btn" href="https://safearn.money/presale"
+          data-custom="buy-btn" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff"
           target="_blank">
           <i class="fas fa-dollar-sign fa-2x"></i>
         </a>
