--- a/china.htm
+++ b/china.htm
@@ -65,7 +65,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item ml-4">
-            <a target="_blank" class="btn btn-primary" target="_blank" href="https://safearn.money/presale/china.html" style="margin-top: 15px">购买</a>
+            <a target="_blank" class="btn btn-primary" target="_blank" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff" style="margin-top: 15px">购买</a>
           </li>
 
         
@@ -89,8 +89,8 @@
 
   <!-- navbar donation button show this one on mobile -->
 	<div id="btn-buy-mobile">
-		<div id="donate-nav" class="btn btn-primary text-uppercase btn-lg disabled">
-			<a href="https://safearn.money/presale/china.html" target="_blank">购买</a>
+		<div id="donate-nav" class="btn btn-primary text-uppercase btn-lg">
+			<a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff" target="_blank">购买</a>
 		</div>
 	</div>
 
@@ -105,7 +105,7 @@
      <div class="hero-text">
        <h1> SafeEarn </h1>
         <h2> 第一个Safemoon静态奖金+自动提升+Zeus回购代币。 </h2>
-        <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4" href="https://safearn.money/presale/china.html" target="_blank"><i class="fa fa-dollar-sign fa-lg"></i> <span class="ml-3"> 购买</span> </a>
+        <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff" target="_blank"><i class="fa fa-dollar-sign fa-lg"></i> <span class="ml-3"> 购买</span> </a>
         <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4" target="_blank" href="https://t.me/safe_earn_china"><i class="fab fa-telegram-plane fa-lg"></i> <span class="ml-3"> TELEGRAM </span> </a>
       </div>
     </div>
@@ -258,7 +258,7 @@
               <a data-toggle="collapse" href="#faq-list-2" class="collapsed"> 我如何购买？Slip?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-parent=".faq-list">
                 <p>
-                  你可以<a href="https://safearn.money/presale/china.html" target="_blank" style="display: inline; padding: 0"> 在这里买到它 </a>, 或将合同地址粘贴到PancakeSwap中 (0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff). <br/>
+                  你可以<a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff" target="_blank" style="display: inline; padding: 0"> 在这里买到它 </a>, 或将合同地址粘贴到PancakeSwap中 (0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff). <br/>
                   设置滑移率为13%-16%。使用煎饼V2
                 </p>
               </div>
