--- a/china.htm
+++ b/china.htm
@@ -27,20 +27,19 @@
 	<!-- Bootstrap core CSS -->
 	<link href="src/bootstrap.css" rel="stylesheet">
 
+  <link rel="stylesheet" href="src/font-awesome.min.css">
+  <!-- <link href="src/bootslander.css" rel="stylesheet"> -->
+  <link href="src/theme.css" rel="stylesheet">
+  <link href="src/styles.css" rel="stylesheet">
 
-	<link href="src/all-fa.min.css" rel="stylesheet"> <!--load all styles -->
-
-	<link href="src/bootslander.css" rel="stylesheet">
-
-
-	<link href="src/act.css" rel="stylesheet">
-
-
-	<link href="src/styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="src/presale-theme.css">
+  <!-- <link rel="stylesheet" href="presale/css/style.css"> -->
+	<link rel="stylesheet" href="presale/css/coin.css">
 
 
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Work+Sans:ital,wght@0,400;0,500;0,700;1,600&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,700&family=Work+Sans:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-QDWMXGKEVJ"></script>
