--- a/index.htm
+++ b/index.htm
@@ -32,15 +32,19 @@
   <!-- Bootstrap core CSS -->
   <link href="src/bootstrap.css" rel="stylesheet">
   <link rel="stylesheet" href="src/font-awesome.min.css">
-  <link href="src/bootslander.css" rel="stylesheet">
-  <link href="src/act.css" rel="stylesheet">
+  <!-- <link href="src/bootslander.css" rel="stylesheet"> -->
+  <link href="src/theme.css" rel="stylesheet">
   <link href="src/styles.css" rel="stylesheet">
 
+  <link rel="stylesheet" href="src/presale-theme.css">
+  <!-- <link rel="stylesheet" href="presale/css/style.css"> -->
+	<link rel="stylesheet" href="presale/css/coin.css">
 
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Work+Sans:ital,wght@0,400;0,500;0,700;1,600&display=swap"
-    rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,700&family=Work+Sans:wght@400;700&display=swap" rel="stylesheet">
+
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-QDWMXGKEVJ"></script>
@@ -111,7 +115,7 @@
         <div class="hero-text">
           <h1> SafeEarn </h1>
           <h2> 1st SafeMoon Yield Generation Token </h2>
-          <h2 style="color: #ff50c9;"> <b>Just Launched!</b> Double sell tax for the first 24hs!</h2>
+          <h2 style="color: #9c50ff;"> <b>Just Launched!</b> Double sell tax for the first 24hs!</h2>
           <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4 mt-4 mt-md-0"
             data-custom="buy-btn" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff"
             target="_blank"><i class="fa fa-dollar-sign fa-lg"></i> <span class="ml-3"> BUY SAFEARN</span> </a>
@@ -145,8 +149,8 @@
           <h4 class="d-flex align-items-center"> <i class="fas fa-bolt gradient-icon"> </i> <span> Zeus Strike Buy-Back
             </span> </h4>
           <p>
-            <b>We got Zeus himself in our team! When in need, Zeus hits you with a powerful lightning</b>, generating a moonshot for everyone to follow. <br />
-            Massive Pump fueled by fees, helping to achieve a healthy chart.
+            We got <b>Zeus himself</b> in our team! When in need, Zeus hits you with a powerful lightning, generating a moonshot for everyone to follow. <br />
+            <b>Massive Pump fueled by fees</b>, helping to achieve a healthy chart.
           </p>
         </div>
       </div>
@@ -282,6 +286,72 @@
 
     </div>
   </section>
+
+
+<!-- 
+  <section class="home-banner-area gradient-bg">
+    <div class="container box_1620" id="main-container">
+      <div class="banner-inner d-flex align-items-center justify-content-around">
+    <div class="col-md-4 coin-container">
+      <div class="coin">
+        <div class="coin__front"></div>
+        <div class="coin__edge">
+          <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+          <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+          <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+          <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+            <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+          <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+          <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+          <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+
+        </div>
+        <div class="coin__back"></div>
+        <div class="coin__shadow"></div>
+        </div>
+      
+    </div>
+
+    <div class="personal-text">
+
+      <h3>SafeEarn</h3>
+      <h4 class="subtitle-main"> <b>Join the Presale of the 1st ever SafeMoon Reflection token </b></h4>
+      <p class="mid-txt">
+        Hold $SAFEARN, earn SafeMoon. Sell SafeMoon, buy more $SAFEARN, earn even MORE SafeMoon! <br/> <br/>
+        Our token has some other awesome features, such as <b>Zeus BuyBack </b>, <b>AutoBoost</b>, and of course <b>Anti-Whale System</b>!
+        You can <a href="https://safearn.money" target="_blank"> Learn more about it here</a> !
+      </p>
+      <hr class="d-md-none"/>
+      <ul class="list token-info-head">
+        <li>
+          <a href="#" class="d-flex">
+            <i class="far fa-rocket mr-2" style="font-size: 1.7rem;"></i>
+            <span>
+              <b class="mr-1"> Launch: </b>
+              Sunday 18th July - 11pm UTC
+            </span>
+          </a>
+        </li>
+        <li style="word-break: break-all;">
+          <a href="https://bscscan.com/address/0xa276880B537de681b50c4f4bc7Cf6843d4da06Ee#code" class="d-flex" target="_blank">
+            <i class="far fa-scroll mr-2" ></i>
+            <span>
+              <b class="mr-1"> Presale Contract: </b>
+              0xa276880B537de681b50c4f4bc7Cf6843d4da06Ee
+            </span>
+            <i class="fas fa-external-link ml-3"></i>
+          </a>
+        </li>
+      </ul>
+      <div class="d-flex justify-content-md-start mt-4">
+        <button class="btn btn-lg btn-tertiary mr-3 start-presale-modal "> <i class="fas fa-door-closed mr-2"></i> Connect Wallet </button>
+        
+      </div>
+    </div>
+
+    </div>
+      </div>
+    </section> -->
 
 
 
