Claim button enabled

--- a/presale/china.html
+++ b/presale/china.html
@@ -243,7 +243,7 @@
         					<h1 style="text-align: center;">
 								<span id="tokens-reserved"> 0 </span> SAFEARN
 							</h1>
-							<button class="btn btn-tertiary btn-lg btn-block disabled mt-5"> 你可以在周一领取你的代币 </button>
+							<button class="btn btn-tertiary btn-lg btn-block mt-5"> 获取你的代币 </button>
         				</div>
 					</div>
 					
