--- a/presale/index.html
+++ b/presale/index.html
@@ -244,7 +244,7 @@
         					<h1 style="text-align: center;">
 								<span id="tokens-reserved"> 0 </span> SAFEARN
 							</h1>
-							<button class="btn btn-tertiary btn-lg btn-block mt-5 disabled" id="claim-tokens"> Claim your tokens soon! </button>
+							<button class="btn btn-tertiary btn-lg btn-block mt-5" id="claim-tokens"> Claim your tokens! </button>
         				</div>
 					</div>
 
