--- a/index.htm
+++ b/index.htm
@@ -492,7 +492,7 @@
         <div class="col-md-4 text-center">
           <div class="px-2">
             <h6 class="title">SafeEarn - 2021</h6> <br>
-
+            <h6>E-Mail: dev@safearn.app</h6>
           </div>
 
         </div>
