--- a/china.htm
+++ b/china.htm
@@ -69,8 +69,16 @@
 
         
           <li class="nav-item ml-4">
-            <a target="_blank" class="btn btn-secondary" href="https://t.me/safe_earn_china" style="margin-top: 15px">Telegram</a>
+            <a target="_blank" class="btn btn-secondary" href="https://t.me/safe_earn_china"
+              style="margin-top: 15px"><i class="fab fa-telegram"></i></a>
           </li>
+
+          <li class="nav-item ml-4">
+            <a target="_blank" class="btn btn-tertiary" href="https://poocoin.app/tokens/0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff"
+              style="margin-top: 15px"><i class="fas fa-chart-line"></i></a>
+          </li>
+
+
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#tokenomics">代币生态</a>
           </li>
@@ -349,6 +357,8 @@
 		  <div class="col-md-4 text-center">
 				<div class="px-2">
 				<h6 class="title">SafeEarn - 2021</h6> <br>
+
+        <h6>E-Mail: dev@safearn.app</h6>
 			
       </div>
 
