--- a/index.htm
+++ b/index.htm
@@ -77,10 +77,17 @@
           </li>
 
 
+
           <li class="nav-item ml-4">
             <a target="_blank" class="btn btn-secondary" href="https://t.me/safe_earn"
-              style="margin-top: 15px">Telegram</a>
+              style="margin-top: 15px"><i class="fab fa-telegram"></i></a>
           </li>
+
+          <li class="nav-item ml-4">
+            <a target="_blank" class="btn btn-tertiary" href="https://poocoin.app/tokens/0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff"
+              style="margin-top: 15px"><i class="fas fa-chart-line"></i></a>
+          </li>
+
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#tokenomics">Tokenomics</a>
           </li>
@@ -115,7 +122,7 @@
         <div class="hero-text">
           <h1> SafeEarn </h1>
           <h2> 1st SafeMoon Yield Generation Token </h2>
-          <h2 style="color: #9c50ff;"> <b>Just Launched!</b> Double sell tax for the first 24hs!</h2>
+          <!-- <h2 style="color: #9c50ff;"> <b>Just Launched!</b></h2> -->
           <a class="btn btn-outline btn-xl text-uppercase mx-4 mt-md-5 mb-4 mt-4 mt-md-0"
             data-custom="buy-btn" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff"
             target="_blank"><i class="fa fa-dollar-sign fa-lg"></i> <span class="ml-3"> BUY SAFEARN</span> </a>
