--- a/presale/index.html
+++ b/presale/index.html
@@ -81,7 +81,7 @@
         <section class="home-banner-area gradient-bg">
            	<div class="container box_1620" id="main-container">
            		<div class="banner-inner d-flex align-items-center justify-content-around">
-					<div class="col-md-4 coin-container">
+					<div class="col-md-4 col-xl-2 coin-container">
 						<div class="coin">
 							<div class="coin__front"></div>
 							<div class="coin__edge">
