--- a/index.htm
+++ b/index.htm
@@ -430,7 +430,10 @@
                   data-custom="buy-btn" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff"
                   target="_blank" style="display: inline; padding: 0"> buy </a>, or paste the contract address
                 into PancakeSwap (0x099f551eA3cb85707cAc6ac507cBc36C96eC64Ff). <br />
-                Set Slippage to 13%-16%. Use Pancake V2
+                Set Slippage to 16%. Use Pancake V2 <br/>
+
+                If you're having trouble, remove all decimal values of our token (So just buy integer values) and try to increase slippage a bit more just in case (18-20 should work)
+                
               </p>
             </div>
           </li>
