--- a/index.htm
+++ b/index.htm
@@ -175,9 +175,9 @@
     <div class="personal-text">
 
       <h3>SafeEarn</h3>
-      <h4 class="subtitle-main"> <b>The 1st Safemoon Yield Generator token</b></h4>
+      <h4 class="subtitle-main"> <b>The 1st Safemoon Yield Generation token</b></h4>
       <p class="mid-txt">
-        Simply hold your $SAFEARN to earn SAFEMOON. This generates what we call <b>Double Reflection</b> since the original SafeMoon reflection works in paralell, you will earn way more profits than you have every imagined. <br/>
+        Simply hold your $SAFEARN to earn SAFEMOON. This generates what we call <b>Double Reflection</b> since the original SafeMoon reflection works in parallel, you will earn way more profits than you have every imagined. <br/>
         We have added many features to keep SafeEarn's health and longevity, such as multiple Buy-Back Systems, and an Anti-Whale system.
         You can <a href="#why"> Read more about it here</a> !
       </p>
